--- a/inventory/group_vars/ms01/vars.yml
+++ b/inventory/group_vars/ms01/vars.yml
@@ -10,4 +10,4 @@ __mt_dns_entries_host:
   - name: "{{ inventory_hostname }}.vpro.{{ domains['hb'] }}"
     address: "{{ host_ips.vpro }}"
 
-grub_cmdline_group: "console=tty0 console=ttyS4,115200n8"
+grub_cmdline_group: "intel_iommu=on console=tty0 console=ttyS4,115200n8"
