--- a/inventory/host_vars/crs309/ports.yml
+++ b/inventory/host_vars/crs309/ports.yml
@@ -5,7 +5,7 @@ host_exclude_nets:
 
 mt_trunk_ports: [
   sfp-sfpplus1, sfp-sfpplus2, sfp-sfpplus3, sfp-sfpplus4,
-  sfp-sfpplus5,
+  sfp-sfpplus5, sfp-sfpplus6,
 ]
 
 mt_access_ports:
