Don't alert HostOutOfMemory for syno
It runs with low memory often without issues.

--- a/inventory/group_vars/prom_common/alertmanager.yml
+++ b/inventory/group_vars/prom_common/alertmanager.yml
@@ -37,6 +37,11 @@ alertmanager_route:
         - alertname=~"BlackboxSslCertificate.+"
         - instance="https://google.com"
 
+    - receiver: 'null'
+      matchers:
+        - alertname="HostOutOfMemory"
+        - instance="syno"
+
     - group_by: ["job"]
       group_wait: 10m
       matchers:
