--- a/playbooks/talos.yml
+++ b/playbooks/talos.yml
@@ -260,6 +260,7 @@
             context: "{{ talos_kubectl_context }}"
             kind: Node
           register: __node
+          when: inventory_hostname in groups['talos_cp']
 
         - name: Upgrade Kubernetes if required  # noqa no-changed-when
           run_once: true
@@ -268,7 +269,9 @@
             cmd: "talosctl -n {{ ansible_host }} upgrade-k8s --to {{ kube_version }}"
           vars:
             cmp_vers: "v{{ kube_version }}"
-          when: __node.resources | json_query('[].status.nodeInfo.kubeletVersion') | select('version', cmp_vers, '<')
+          when:
+            - inventory_hostname in groups['talos_cp']
+            - __node.resources | json_query('[].status.nodeInfo.kubeletVersion') | select('version', cmp_vers, '<')
 
   post_tasks:
     - name: Eject boot disk
