--- a/inventory/group_vars/prom/prometheus.yml
+++ b/inventory/group_vars/prom/prometheus.yml
@@ -190,29 +190,15 @@ __extra_prometheus_scrape_configs:
   - job_name: "aquaero"
     scrape_interval: 30s
     static_configs:
-      - targets: ["{{ hostvars['desktop'].ansible_host }}:{{ hostvars['desktop'].aquaero_exporter_port }}"]
+      - targets:
+          - "{{ hostvars['desktop'].ansible_host }}:{{ hostvars['desktop'].aquaero_exporter_port }}"
+          - "{{ hostvars['desktop'].host_ips.public }}:{{ hostvars['desktop'].aquaero_exporter_port }}"
         labels: "{{ hostvars['desktop'].prometheus_node_labels }}"
 
   - job_name: "nvidia"
     scrape_interval: 30s
     static_configs:
       - targets: ["{{ hostvars['desktop'].ansible_host }}:{{ hostvars['desktop'].nvidia_exporter_port }}"]
-        labels: "{{ hostvars['desktop'].prometheus_node_labels }}"
-
-  - job_name: "fah"
-    scrape_interval: 60s
-    static_configs:
-      - targets: ["{{ hostvars['desktop'].ansible_host }}:{{ hostvars['desktop'].fah_exporter_port }}"]
-        labels: "{{ hostvars['desktop'].prometheus_node_labels }}"
-
-  - job_name: "wmi"
-    static_configs:
-      - targets: ["{{ hostvars['desktop'].ansible_host }}:{{ hostvars['desktop'].wmi_exporter_port }}"]
-        labels: "{{ hostvars['desktop'].prometheus_node_labels }}"
-
-  - job_name: "hwinfo"
-    static_configs:
-      - targets: ["{{ hostvars['desktop'].ansible_host }}:{{ hostvars['desktop'].hwinfo_exporter_port }}"]
         labels: "{{ hostvars['desktop'].prometheus_node_labels }}"
 
   - job_name: 'postgres'
