--- a/inventory/host_vars/theia/vars.yml
+++ b/inventory/host_vars/theia/vars.yml
@@ -14,8 +14,8 @@ btrfs_root: ""
 prometheus_node_targets: ["{{ host_ips.vm + ':' + node_exporter_port | string }}"]
 
 __unattended_package_blacklist_4:
-  - "*zfs*"
-  - "*zpool*"
+  - ".*zfs.*"
+  - ".*zpool.*"
 
 grub_config:
   - regexp: '^GRUB_TIMEOUT'
