Add Ceph back, again
Reverts 3ee3a0441848b6a29580a8d72ab60d81d3bd35f6 with modifications to accomodate new requirements.
- Remove HDD
- One CephFS
- Use raw LUKS device
- Use EC k=3,m=2 for data

Also reverts 2150470d3424c20de387b3cbabe5790e55ebf5c0 without samba

--- a/inventory/group_vars/prom/firewall.yml
+++ b/inventory/group_vars/prom/firewall.yml
@@ -52,3 +52,8 @@ firewall_rules:
   # Loki sends alerts too
   - port: "{{ alertmanager_port }}"
     sources: "{{ subnets.vm.loki }}"
+  # Ceph
+  - port: "{{ prometheus_port }}"
+    sources: "{{ subnets.vm.hosts }}"
+  - port: "{{ alertmanager_port }}"
+    sources: "{{ subnets.vm.hosts }}"
