--- a/inventory/group_vars/all/network.yml
+++ b/inventory/group_vars/all/network.yml
@@ -213,9 +213,16 @@ vips:
       - 10.0.10.34
     localgw03:
       - 10.0.10.35
+    ceph_nfs:
+      - 10.0.10.36
   general:
     smb:
       - 10.0.50.33
+    ceph_nfs:
+      - 10.0.50.36
+  san:
+    ceph_nfs:
+      - 10.0.2.36
   talos:
     control_plane:
       - 10.0.28.33
@@ -228,9 +235,16 @@ vips_with_prefix:
       - 10.0.10.34/24
     localgw03:
       - 10.0.10.35/24
+    ceph_nfs:
+      - 10.0.10.36/24
   general:
     smb:
       - 10.0.50.33/24
+    ceph_nfs:
+      - 10.0.50.36/24
+  san:
+    ceph_nfs:
+      - 10.0.2.36/24
   talos:
     control_plane:
       - 10.0.28.33/24
