--- a/inventory/group_vars/localgw/nginx.yml
+++ b/inventory/group_vars/localgw/nginx.yml
@@ -9,6 +9,13 @@ __nginx_upstreams_1:
     servers: ["{{ hostvars['theia'].host_ips.vm }}:{{ hostvars['theia'].minio_server_port }}"]
     keepalive: 16
 
+  - name: ceph-dashboard
+    servers: "{{ groups['ceph'] | map('extract', hostvars, 'host_ips') | map(attribute='san') |
+      map('regex_replace', '$', ':' + (ceph_dashboard_port | string)) | list }}"
+  - name: ceph-rgw
+    servers: "{{ groups['ceph'] | map('extract', hostvars, 'host_ips') | map(attribute='san') |
+      map('regex_replace', '$', ':' + (rgw_frontend_port | string)) | list }}"
+
 __nginx_vhosts_1:
   - filename: external-dns.conf
     server_name: external-dns
@@ -17,7 +24,10 @@ __nginx_vhosts_1:
   - filename: minio-console.conf
     server_name: minio-console
     template: "{{ repo_base_dir }}/files/webgw/nginx/minio-console.conf.j2"
-
   - filename: minio-api.conf
     server_name: minio-api
     template: "{{ repo_base_dir }}/files/webgw/nginx/minio-api.conf.j2"
+
+  - filename: ceph.conf
+    server_name: ceph
+    template: "{{ repo_base_dir }}/files/webgw/nginx/ceph.conf.j2"
