--- a/inventory/host_vars/theia/borg.yml
+++ b/inventory/host_vars/theia/borg.yml
@@ -22,6 +22,7 @@ borg_remote_repo_general: "ssh://{{ borg_ssh_check_general }}/."
 
 borg_syno_tank_passphrase: "{{ vault_borg_syno_tank_passphrase }}"
 borg_remote_tank_passphrase: "{{ vault_borg_remote_tank_passphrase }}"
+borg_cephfs_tank_passphrase: "{{ vault_borg_cephfs_tank_passphrase }}"
 
 borg_backups:
   - name: "root-tank"
@@ -95,3 +96,26 @@ borg_backups:
     prune_args:
       - "--keep-monthly 3"
       - "--keep-yearly 2"
+
+  - name: "cephfs"
+    timer_description: "Backup CephFS to tank every 7 days"
+    oncalendar: "*-*-01/7 01:21:00"
+    passphrase: "{{ borg_cephfs_tank_passphrase }}"
+    archive_name: "cephfs"
+    repo: "{{ borg_pool }}/cephfs"
+    pre_run: |
+      mountpoint -q /mnt/ceph || exit 1
+      snap_dir="/mnt/ceph/.snap/borg_tmp.$(date +%Y%m%dT%H%M)"
+      mkdir -p "$snap_dir"
+      cd "$snap_dir" || exit 1
+    post_run: |
+      cd /
+      rmdir "$snap_dir"
+    paths:
+      - "."
+    create_args:
+      - "--exclude '**/.snap'"
+    prune_args:
+      - "--keep-weekly 2"
+      - "--keep-monthly 3"
+      - "--keep-yearly 1"
