--- a/playbooks/libvirt-vm-create.yml
+++ b/playbooks/libvirt-vm-create.yml
@@ -33,6 +33,31 @@
             discard: "unmap"
       tags: ["always"]
 
+    - name: Add extra RBD disks
+      ansible.builtin.set_fact:
+        vm_extra_disks: "{{ vm_extra_disks + [tmp_dict] }}"
+      loop: "{{ vm_rbd_data_disks }}"
+      loop_control:
+        label: "{{ tmp_dict.name }}"
+        index_var: index
+      vars:
+        disk_name: "data{{ '%02d' % (index + 1) }}"
+        tmp_dict:
+          name: '{{ inventory_hostname }}-{{ disk_name }}'
+          type: network
+          format: "raw"
+          capacity: "{{ item }}"
+          serial: "{{ disk_name }}"
+          auth: "{{ vm_rbd_auth }}"
+          source:
+            protocol: rbd
+            port: 3300
+            name: "{{ vm_rbd_pool }}/{{ inventory_hostname }}-{{ disk_name }}"
+            hosts_list: "{{ vm_rbd_hosts_list }}"
+          driver_options:
+            discard: "unmap"
+      tags: ["always"]
+
     - name: Generate ignition
       delegate_to: "{{ vm_host }}"
       ansible.builtin.copy:
