--- a/inventory/group_vars/gitea/libvirt.yml
+++ b/inventory/group_vars/gitea/libvirt.yml
@@ -4,6 +4,7 @@ vm_template: "debian12_packer.{{ vm_disk_format }}"
 vm_cpus: 4
 vm_mem: 4096
 
+vm_rbd_root_enabled: true
 vm_root_size: "20G"
-vm_data_disks:
+vm_rbd_data_disks:
   - "50G"
