--- a/inventory/group_vars/localgw/vars.yml
+++ b/inventory/group_vars/localgw/vars.yml
@@ -8,8 +8,13 @@ __host_ips_3:
 
 nginx_exporter_web_listen_address: "{{ ansible_host }}:{{ nginx_exporter_port }}"
 
-prometheus_ignore_down: true
+group_prometheus_node_labels:
+  group: "localgw"
+  ignore_down: "true"
 # Workaround very bizare bug where wireguard_interface ends up defined as "wg0"
 wireguard_interface: false
 
 swapfile_size: 1G
+
+group_promtail_external_labels:
+  group: "localgw"
