--- a/inventory/host_vars/syno/vars.yml
+++ b/inventory/host_vars/syno/vars.yml
@@ -7,7 +7,8 @@ node_exporter_installed: false
 # TODO
 promtail_scrape_configs: []
 
-prometheus_ignore_down: true
+group_prometheus_node_labels:
+  ignore_down: "true"
 prometheus_smartctl_targets: ["{{ smartctl_exporter_listen_address }}"]
 
 wol_host: "rb5009"
