--- a/playbooks/talos.yml
+++ b/playbooks/talos.yml
@@ -1,7 +1,7 @@
 #!/usr/bin/env -S ansible-playbook
 ---
 
-# https://www.talos.dev/v1.5/reference/configuration/
+# https://www.talos.dev/v1.11/reference/configuration/
 
 - name: Setup Talos
   hosts: talos
@@ -416,6 +416,56 @@
           metadata:
             labels: "{{ node_labels }}"
       tags: ["node", "labels"]
+
+    - name: Get admin pod on self
+      delegate_to: localhost
+      kubernetes.core.k8s_info:
+        kind: Pod
+        namespace: kube-system
+        label_selectors:
+          - app.kubernetes.io/name=admin
+          - app.kubernetes.io/managed-by=ansible
+        field_selectors:
+          - "spec.nodeName={{ inventory_hostname }}"
+      register: __admin_pod
+      tags: ["zfs"]
+
+    - name: Prepare OpenEBS ZFS provisioner
+      vars:
+        ansible_connection: kubernetes.core.kubectl
+        ansible_kubectl_context: "{{ talos_kubectl_context }}"
+        ansible_kubectl_namespace: "{{ __admin_pod.resources[0].metadata.namespace }}"
+        ansible_kubectl_pod: "{{ __admin_pod.resources[0].metadata.name }}"
+      when:
+        - __admin_pod.resources
+        - vm_extra_disks | selectattr('serial', 'defined') | selectattr('serial', 'eq', 'raw01')
+      tags: ["zfs"]
+      block:
+        - name: Get existing zpools
+          changed_when: false
+          check_mode: false
+          ansible.builtin.command:
+            cmd: "chroot /host zpool list --json"
+          register: __zpool_list
+
+        - name: Parse output
+          ansible.builtin.set_fact:
+            zpool_list: "{{ __zpool_list.stdout | from_json }}"
+          when: __zpool_list.stdout != ""
+
+        - name: Create zpool if it's missing  # noqa no-changed-when
+          ansible.builtin.command:
+            cmd: >-
+              chroot /host zpool create
+                -o ashift=12
+                -o autotrim=on
+                -O acltype=posixacl -O xattr=sa -O dnodesize=auto
+                -O compression=lz4
+                -O normalization=formD
+                -O relatime=on
+                -O mountpoint=none
+                ebs /dev/disk/by-id/virtio-raw01
+          when: __zpool_list.stdout == "" or 'ebs' not in zpool_list.pools
 
 - name: Setup Kubernetes
   hosts: talos_cp[0]
