--- a/inventory/group_vars/prom/prometheus.yml
+++ b/inventory/group_vars/prom/prometheus.yml
@@ -46,6 +46,13 @@ __prom_cadvisor_configs: >-
 __prom_ceph_targets: >-
   {%- set tmp = [] -%}
   {%- for h in groups['ceph'] | sort -%}
+  {{- tmp.append(hostvars[h].host_ips.vm + ':' + (ceph_metrics_port | string)) -}}
+  {%- endfor -%}
+  {{ tmp }}
+
+__prom_ceph_exporter_targets: >-
+  {%- set tmp = [] -%}
+  {%- for h in groups['ceph'] | sort -%}
   {{- tmp.append(hostvars[h].host_ips.vm + ':' + (ceph_exporter_port | string)) -}}
   {%- endfor -%}
   {{ tmp }}
@@ -101,6 +108,11 @@ __extra_prometheus_scrape_configs:
     honor_labels: true
     static_configs:
       - targets: "{{ __prom_ceph_targets }}"
+
+  - job_name: "ceph-exporter"
+    scrape_interval: 15s
+    static_configs:
+      - targets: "{{ __prom_ceph_exporter_targets }}"
 
   - job_name: "nvme"
     static_configs: "{{ __prom_nvme_configs }}"
