--- a/inventory/host_vars/theia/minio.yml
+++ b/inventory/host_vars/theia/minio.yml
@@ -1,9 +1,9 @@
 ---
 
 # https://github.com/minio/mc/releases
-minio_client_release: "RELEASE.2025-03-12T17-29-24Z"
+minio_client_release: "RELEASE.2025-07-21T05-28-08Z"
 # https://github.com/minio/minio/releases
-minio_server_release: "RELEASE.2025-03-12T18-04-18Z"
+minio_server_release: "RELEASE.2025-07-23T15-54-02Z"
 
 minio_server_ip: "{{ host_ips.vm }}"
 minio_server_port: 9091
@@ -20,8 +20,9 @@ minio_install_server: true
 minio_install_client: true
 
 # Create ZFS dataset manually
+minio_server_args: "{{ minio_server_datadirs }}"
 minio_server_datadirs:
-  - /var/lib/minio
+  - /mnt/tank/minio
 
 minio_server_env_extra: |
   MINIO_BROWSER_REDIRECT_URL="https://{{ minio_domain }}/"
