Create RGW account and root user
Still figuring out how to best manage it afterwards, terraform and ansible modules both fail in different ways..

--- a/inventory/group_vars/localgw/dns.yml
+++ b/inventory/group_vars/localgw/dns.yml
@@ -58,7 +58,7 @@ __mt_dns_entries_once:
     cname: "{{ localgw_dns_name }}"
     ttl: 5m
     type: CNAME
-  - name: "rgw.{{ domains['hb'] }}"
+  - name: "{{ rgw_domain }}"
     cname: "{{ localgw_dns_name }}"
     ttl: 5m
     type: CNAME
